계정정보변경시 landingClick도 변경 / 세금계산서 매 달 기본값작업/sitemap

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,20 +37,10 @@
     -->
 
   <!-- 메타데이터 및 검색 엔진 크롤러를 위한 데이터 -->
-  <title>온애드 | 실시간 광고 플랫폼</title>
-  <meta name="description" content="1인 미디어 배너 광고 송출 및 분석 플랫폼" />
+  <title>온애드 | 1인 미디어 실시간 광고 플랫폼</title>
+  <meta name="description" content="OnAD는 1인 미디어 실시간 방송에 배너광고를 송출하는 플랫폼입니다. 크리에이터는 OnAD를 통해 추가 수익을, 광고주는 온애드를 통해 효율적인 광고 채널을 확보할 수 있습니다." />
   <meta name="og:title" content="OnAd | 광고 플랫폼" />
-  <meta name="og:description" content="1인 미디어 배너 광고 송출 및 분석 플랫폼" />
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <meta name="og:description" content="OnAD는 1인 미디어 실시간 방송에 배너광고를 송출하는 플랫폼입니다. 크리에이터는 OnAD를 통해 추가 수익을, 광고주는 온애드를 통해 효율적인 광고 채널을 확보할 수 있습니다." />
 </head>
 
 <body>
