PG사 심사를 위한 admin 계정용 전자결제시스템 구축

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <!-- 결제모듈('iamport'서비스 이용) -->
+  <!-- jQuery -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+  <!-- iamport.payment.js -->
+  <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145090330-1"></script>
   <script>
