--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,9 @@
   <!-- iamport.payment.js -->
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 
+  <!-- twitch service -->
+  <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145090330-1"></script>
   <script>
     if (document.location.hostname.search("onad.io") !== -1) {
