[마케터분석] 크리에이터 세부정보 추가

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
   <!-- iamport.payment.js -->
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 
+  <!-- google analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145090330-1"></script>
   <script>
     if (document.location.hostname.search("onad.io") !== -1) {
@@ -19,6 +20,11 @@
       gtag('config', 'UA-145090330-1');
     }
   </script>
+
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap" rel="stylesheet">
+  
+  <!-- For naver search engine -->
   <meta name="naver-site-verification" content="6a8fd4dd0f383a9a5d31e89d7b05586f91b9dbaa" />
   <meta name="canonical" href="%PUBLIC_URL%" />
   <meta charset="utf-8" />
