--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,8 +22,17 @@
   </script>
 
   <!-- font -->
-  <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap"
+    rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'S-CoreDream-8Heavy';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+  </style>
+
   <!-- For naver search engine -->
   <meta name="naver-site-verification" content="6a8fd4dd0f383a9a5d31e89d7b05586f91b9dbaa" />
   <meta name="canonical" href="%PUBLIC_URL%" />
