--- a/client-ts/public/index.html
+++ b/client-ts/public/index.html
@@ -21,8 +21,8 @@
     }
   </script>
   <!-- google adsense -->
-  <script data-ad-client="ca-pub-4320356355619389" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- <script data-ad-client="ca-pub-4320356355619389" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap"
