캠페인 등록 캠페인 유형 선택 변경 - 생방송 배너광고

--- a/client-ts/public/index.html
+++ b/client-ts/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <!-- 결제모듈('iamport'서비스 이용) -->
@@ -27,7 +27,7 @@
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap"
     rel="stylesheet">
-  
+
   <style>
     @font-face {
       font-family: 'S-CoreDream-8Heavy';
