네이버 서치어드바이저 site verification 추가

--- a/client-ts/public/index.html
+++ b/client-ts/public/index.html
@@ -47,7 +47,9 @@
   </style>
 
   <!-- For naver search engine -->
-  <meta name="naver-site-verification" content="6a8fd4dd0f383a9a5d31e89d7b05586f91b9dbaa" />
+  <!-- naver: wt_onad -->
+  <meta name="naver-site-verification" content="694fe9518665db39340d9dd107be68e3858074f0" />
+
   <meta name="canonical" href="%PUBLIC_URL%" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
