server creatorInfo => creatorInfo_v2, 이 변경에 따른 버그 수정

--- a/client-ts/public/index.html
+++ b/client-ts/public/index.html
@@ -34,6 +34,8 @@
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
   <!-- font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gothic+A1|Noto+Sans+KR|Nanum+Gothic&display=swap"
     rel="stylesheet">
 
