오픈그래프 로고 수정

--- a/client-ts/public/index.html
+++ b/client-ts/public/index.html
@@ -7,7 +7,8 @@
   <meta property="og:url" content="https://onad.io" />
   <meta property="og:description"
     content="ONAD는 1인 미디어 실시간 방송에 배너광고를 송출하는 플랫폼입니다. 크리에이터는 ONAD를 통해 추가 수익을, 광고주는 온애드를 통해 효율적인 광고 채널을 확보할 수 있습니다." />
-  <meta property="og:image" content="https://onad-static-files.s3.ap-northeast-2.amazonaws.com/onad_logo_blue.jpg" />
+  <meta property="og:image"
+    content="https://onad-static-files.s3.ap-northeast-2.amazonaws.com/open-graph/logo_opengraph.png" />
   <!-- 결제모듈('iamport'서비스 이용) -->
   <!-- jQuery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
